--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -62,8 +62,8 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Appelli</a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Prenotazione Appelli</a></li>
-                                        <li><a class="dropdown-item" href="#">Gestione Appelli</a></li>
+                                        <li><a class="dropdown-item" href="Appelli_Prenotazione.aspx">Prenotazione Appelli</a></li>
+                                        <li><a class="dropdown-item" href="Appelli_Gestione.aspx">Gestione Appelli</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
@@ -89,7 +89,7 @@
         </asp:ContentPlaceHolder>
 
         <footer>
-            <div class="bg-dark text-white h-100">
+            <div class="bg-dark text-white h-100 ">
                 <div class="container d-flex justify-content-between align-items-end flex-wrap">
                     <div>
                         <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
