--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -1,41 +1,41 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - AreaStudente</title>
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/AreaStudente.styles.css" asp-append-version="true" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - AreaStudente</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/AreaStudente.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
 
 
     <style>
         .navbar-custom {
-            background-color: #12304F;
+        background-color: #12304F;
         }
 
-            .navbar-custom .nav-link,
-            .navbar-custom .navbar-brand {
-                color: white !important;
-            }
+        .navbar-custom .nav-link,
+        .navbar-custom .navbar-brand {
+        color: white !important;
+        }
 
         .dropdown-menu > li:hover > .dropdown-submenu {
-            display: block;
+        display: block;
         }
 
 
         .sticky-top {
-            z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
+        z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
         }
 
 
 
         .navbar-nav .nav-item.logout {
-            position: absolute;
-            right: 0; /* Posiziona il link a destra */
+        position: absolute;
+        right: 0; /* Posiziona il link a destra */
         }
 
     </style>
@@ -52,7 +52,13 @@
                 <div class="d-flex justify-content-end  mb-2 mt-1">
                     <!-- Pulsanti in alto a destra -->
                     <div class="d-flex gap-2 me-3">
-                        <a href="#" class="btn btn-sm text-white" style="background-color: #12304F;">Area Lavoro</a>
+                        @if (@ViewData["matricola"] != null)
+                        {
+                            <a href = "#" class="btn btn-sm text-white" style="background-color: #12304F;">Area Lavoro</a>
+                        } else
+                        {
+                            <p>disattivato</p>
+                        }
                     </div>
                     <div class="d-flex gap-2 me-3">
                         <a class="btn  btn-sm "  style="color: #12304F; border-color:#12304F;" aria-current="page" asp-controller="Logout" asp-action="Logout">Logout</a>
@@ -105,7 +111,7 @@
                             </li>
 
                             <li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="/Faq/Faq/@ViewData["studente_id"]">FAQ</a>
+								<a class="nav-link active" aria-current="page" href="/Faq/Faq">FAQ</a>
                             </li>
                         </ul>
                     </div>
