--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
     <div class="bg-white p-0 " style="height:6rem;">
         <div class="d-flex flex-row">
             <div class="w-50 d-flex align-items-center">
-                <a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="/resources/logo.png" style="height: 6rem; padding-bottom:10px;"></a>
+                <a asp-area="" asp-controller="Studenti" asp-action="Show"><img src="~/css/resources/logoblu.png" style="height: 6rem; padding-bottom:10px;"/></a>
             </div>
             <div class="d-flex justify-content-end flex-column w-50 mb-2 mt-1">
                 <div class="d-flex justify-content-end  mb-2 mt-1">
