--- a/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
+++ b/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
@@ -39,7 +39,7 @@
 	</div>
 	<div class="container mt--7">
 		<form class="row" method="post" id="modifica-form" enctype="multipart/form-data">
-			<div class="col-12 col-xl-8 mb-4 bg-white border border-1 border-black shadow rounded-5 p-4">
+			<div class="col-12 col-xl-8 mb-4 bg-white border border-1 border-white shadow rounded-5 p-4">
 				<h3 class="text-center">Modifica Profilo</h3>
 
 				<h4 class="heading-small text-muted">USER</h4>
@@ -148,7 +148,7 @@
 
 
 			<div class="col-12 col-xl-4 mt-5 mt-lg-0 px-0 px-lg-2">
-				<div class="bg-white border border-1 border-black shadow rounded-5 p-4 position-relative">
+				<div class="bg-white border border-1 border-white shadow rounded-5 p-4 position-relative">
 
 					@{
 						bool hasImage = Model?.ImmagineProfilo != null && Model.ImmagineProfilo.Length > 0;
