--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -47,9 +47,6 @@
 						<div class="d-flex justify-content-end  mb-2 mt-1">
 							<!-- Pulsanti in alto a destra -->
 							<div class="d-flex gap-2 me-3">
-								<a href="#" class="btn btn-sm text-white" style="background-color: #12304F;">Area Lavoro</a>
-							</div>
-							<div class="d-flex gap-2 me-3">
 								<a class="btn btn-sm text-white" style="background-color: #12304F;" asp-controller="Login" asp-action="Login">Login</a>
 							</div>
 						</div>
@@ -139,7 +136,7 @@
 					<p class="fs-5 mb-1">Chi Siamo</p>
 					<ul class="list-unstyled ms-3">
 						<li>
-							<a class="text-white" asp-area="" asp-controller="Contatti" asp-action="Index">Conattti</a>
+							<a class="text-white" asp-area="" asp-controller="Contatti" asp-action="Index">Contatti</a>
 						</li>
 						<li>
 							<a class="text-white" asp-area="" asp-controller="ComeFunziona" asp-action="Index">Come Funziona</a>
