--- a/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
+++ b/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
@@ -19,7 +19,7 @@
 	</script>
 } *@
 
-<div class="main-container">
+@* <div class="main-container">
 	<!-- Header -->
 	<div class="header px-5 pb-8 pt-5 d-flex align-items-center" style="max-height: 400px; background-image: url('/resources/StudentiUniversitari.jpg'); background-size: cover; background-position: center top;">
 		<!-- Mask -->
@@ -36,11 +36,14 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="container mt--7">
+	</div> *@
+	<div class="container mt-5">
 		<form class="row" method="post" id="modifica-form" enctype="multipart/form-data">
+	<div style="height: 4vh;">
+		&nbsp;
+	</div>
 			<input type="hidden" asp-for="K_Studente" />
-			<div class="col-12 col-xl-8 bg-white border border-1 border-black shadow rounded-5 p-4">
+		<div class="col-12  mb-5 mb-lg-0 col-xl-8 bg-white border border-1 border-black shadow rounded-5 p-4">
 				<h3 class="text-center">Modifica Profilo</h3>
 
 				<h4 class="heading-small text-muted">USER</h4>
@@ -66,6 +69,7 @@
 
 									<label class="form-label form-control-label">Inserisci la Vecchia Password</label>
 									<input type="password" asp-for="PWD" class="form-control form-control-alternative" />
+
 								</div>
 								<div class="mb-2 ">
 									<label class="form-label form-control-label">Nuova Password</label>
@@ -76,7 +80,21 @@
 									<input type="password" name="PasswordConfirm" class="form-control form-control-alternative" />
 								</div>
 
-								@if (TempData["PopupErrore"] != null)
+								@* @if (TempData["PopupErrore"] != null)
+								{
+									<div class="bg-warning text-black p-2">
+										@TempData["PopupErrore"]
+									</div>
+								}
+
+								@if (TempData["PopupSuccesso"] != null)
+								{
+									<div class="bg-success p-2">
+										@TempData["PopupSuccesso"]
+									</div>
+								} *@
+
+							@if (TempData["PopupErrore"] != null)
 								{
 									<div class="bg-warning text-black p-2">
 										@TempData["PopupErrore"]
@@ -145,8 +163,7 @@
 				</div>
 			</div>
 
-		
-				<div class="col-12 col-xl-4 mt-5 mt-lg-0 px-0 px-lg-2">
+				<div class="col-12 col-xl-4 mt-5 mt-lg-0 px-0 px-lg-2 mt-5 mt-lg-0">	
 					<div class="bg-white border border-1 border-black shadow rounded-5 p-4 position-relative">
 
 						@{
@@ -190,7 +207,7 @@
 				</div>			
 		</form>
 	</div>
-</div>
+
 
 <script>
 
