--- a/AreaPubblica/Views/FAQ/Index.cshtml
+++ b/AreaPubblica/Views/FAQ/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="container mt-5">
+﻿<div style="height: 8vh;"></div>
+<div class="container mt-5">
     <h1 class="text-center">FAQ Università</h1>
     <p class="text-center">Domande frequenti per gli studenti universitari</p>
     <div class="accordion" id="faqAccordion">
@@ -146,3 +147,4 @@
 
     </div>
 </div>
+<div style="height: 8vh;"></div>
