--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -48,7 +48,6 @@
             min-height: 100vh;
             flex-direction: column;
             justify-content: space-between;
-           
         }
     </style>
 
@@ -77,7 +76,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Home</a>
+                                    <a class="nav-link active" href="Homepage.aspx">Home</a>
                                 </li>
                                 <li id="liMateriali" runat="server" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Lezioni</a>
@@ -96,9 +95,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Piano di Studio</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Libretto Carriera</a>
+                                <li id="li1" runat="server" class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">La tua carriera</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="AvanzamentoVoti.aspx">Libretto</a></li>
+                                        <li><a class="dropdown-item" href="RinunciaStudi.aspx">Rinuncia agli studi</a></li>
+                                    </ul>
                                 </li>
+                               
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Pagamenti</a>
                                 </li>
