--- a/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
+++ b/AreaStudente/Views/Studenti/ModificaProfilo.cshtml
@@ -37,50 +37,54 @@
 			</div>
 		</div>
 	</div> *@
-	<div class="container mt-5">
-		<form class="row" method="post" id="modifica-form" enctype="multipart/form-data">
-	<div style="height: 4vh;">
-		&nbsp;
-	</div>
-			<input type="hidden" asp-for="K_Studente" />
-		<div class="col-12  mb-5 mb-lg-0 col-xl-8 bg-white border border-1 border-black shadow rounded-5 p-4">
-				<h3 class="text-center">Modifica Profilo</h3>
+<div class="container mt-5">
+	<form class="row" method="post" id="modifica-form" enctype="multipart/form-data">
+		<div style="height: 4vh;">
+			&nbsp;
+		</div>
+		<input type="hidden" asp-for="K_Studente" />
+		<div class="col-12  mb-5 mb-xl-0 col-xl-8 bg-white border border-1 border-black shadow rounded-5 p-4">
+			<h3 class="text-center mb-2">Modifica Profilo</h3>
+			<p class="text-black px-1">
+				In quest'area personale puoi aggiornare i tuoi dati anagrafici e di contatto, modificare la password e personalizzare la tua immagine di profilo.
+				Ti ricordiamo che l'indirizzo e-mail associato al tuo account non può essere modificato.
+			</p>
 
-				<h4 class="heading-small text-muted">USER</h4>
-				<div class="row mb-0 mb-lg-3 align-items-end">
-					<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">E-Mail</label>
-						<input type="email" asp-for="Email" class="form-control form-control-alternative" readonly />
-					</div>
-					<div class="col-12 col-lg-3 mb-2 mb-lg-0">
-						<a type="button" class="btn btn-primary fs-6" data-bs-toggle="modal" data-bs-target="#modifica-password-modal" aria-expanded="false" aria-controls="modifica-password-collapse">Modifica Password</a>
-					</div>
+			<h4 class="heading-small text-muted">USER</h4>
+			<div class="row mb-0 mb-lg-3 align-items-end">
+				<div class="col-12 col-lg-9 mb-2 mb-lg-0">
+					<label class="form-label form-control-label">E-Mail</label>
+					<input type="email" asp-for="Email" class="form-control form-control-alternative" readonly />
 				</div>
+				<div class="col-12 col-lg-3 mb-2 mb-lg-0">
+					<a type="button" class="btn btn-primary fs-6" data-bs-toggle="modal" data-bs-target="#modifica-password-modal" aria-expanded="false" aria-controls="modifica-password-collapse">Modifica Password</a>
+				</div>
+			</div>
 
-				<div class="modal fade" id="modifica-password-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h1 class="modal-title fs-5" id="exampleModalLabel">Modifica Password</h1>
-								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			<div class="modal fade" id="modifica-password-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h1 class="modal-title fs-5" id="exampleModalLabel">Modifica Password</h1>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+							<div class="mb-2 ">
+
+								<label class="form-label form-control-label">Inserisci la Vecchia Password</label>
+								<input type="password" asp-for="PWD" class="form-control form-control-alternative" />
+
 							</div>
-							<div class="modal-body">
-								<div class="mb-2 ">
+							<div class="mb-2 ">
+								<label class="form-label form-control-label">Nuova Password</label>
+								<input type="password" name="PasswordNew" class="form-control form-control-alternative" />
+							</div>
+							<div class="mb-4">
+								<label class="form-label form-control-label">Conferma Nuova Password</label>
+								<input type="password" name="PasswordConfirm" class="form-control form-control-alternative" />
+							</div>
 
-									<label class="form-label form-control-label">Inserisci la Vecchia Password</label>
-									<input type="password" asp-for="PWD" class="form-control form-control-alternative" />
-
-								</div>
-								<div class="mb-2 ">
-									<label class="form-label form-control-label">Nuova Password</label>
-									<input type="password" name="PasswordNew" class="form-control form-control-alternative" />
-								</div>
-								<div class="mb-4">
-									<label class="form-label form-control-label">Conferma Nuova Password</label>
-									<input type="password" name="PasswordConfirm" class="form-control form-control-alternative" />
-								</div>
-
-								@* @if (TempData["PopupErrore"] != null)
+							@* @if (TempData["PopupErrore"] != null)
 								{
 									<div class="bg-warning text-black p-2">
 										@TempData["PopupErrore"]
@@ -95,118 +99,118 @@
 								} *@
 
 							@if (TempData["PopupErrore"] != null)
-								{
-									<div class="bg-warning text-black p-2">
-										@TempData["PopupErrore"]
-									</div>
-								}
+							{
+								<div class="text-danger p-2">
+									@TempData["PopupErrore"]
+								</div>
+							}
 
-								@if (TempData["PopupSuccesso"] != null)
-								{
-									<div class="bg-success p-2">
-										@TempData["PopupSuccesso"]
-									</div>
-								}
+							@if (TempData["PopupSuccesso"] != null)
+							{
+								<div class="text-primary p-2">
+									@TempData["PopupSuccesso"]
+								</div>
+							}
 
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
-								<button type="submit" class="btn btn-primary">Salva</button>
-							</div>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+							<button type="submit" class="btn btn-primary">Salva</button>
 						</div>
 					</div>
 				</div>
-				<hr class="my-4">
+			</div>
+			<hr class="my-4">
 
-				<h4 class="heading-small text-muted">Dati Anagrafici</h4>
-				<div class="row mb-0 mb-lg-3">
-					<div class="col-12 col-lg-4 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Cognome</label>
-						<input type="text" asp-for="Cognome" class="form-control form-control-alternative" required />
-					</div>
-					<div class="col-12 col-lg-4 mb-2">
-						<label class="form-label form-control-label">Nome</label>
-						<input type="text" asp-for="Nome" class="form-control form-control-alternative" required />
-					</div>
-					<div class="col-12 col-lg-4 mb-2">
-						<label class="form-label form-control-label">Data di Nascita</label>
-						<input type="date" asp-for="DataNascita" class="form-control form-control-alternative" required />
-					</div>
+			<h4 class="heading-small text-muted">Dati Anagrafici</h4>
+			<div class="row mb-0 mb-lg-3">
+				<div class="col-12 col-lg-4 mb-2 mb-lg-0">
+					<label class="form-label form-control-label">Cognome</label>
+					<input type="text" asp-for="Cognome" class="form-control form-control-alternative" required />
 				</div>
-
-				<hr class="my-4">
-
-				<h4 class="heading-small text-muted mt-0">Informazioni di contatto</h4>
-				<div class="row mb-0 mb-lg-3">
-					<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Indirizzo</label>
-						<input type="text" asp-for="Indirizzo" class="form-control form-control-alternative" required />
-					</div>
-					<div class="col-12 col-lg-3 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">CAP</label>
-						<input type="text" asp-for="CAP" class="form-control form-control-alternative" maxlength="5" required />
-					</div>
+				<div class="col-12 col-lg-4 mb-2">
+					<label class="form-label form-control-label">Nome</label>
+					<input type="text" asp-for="Nome" class="form-control form-control-alternative" required />
 				</div>
-
-				<div class="row mb-0 mb-lg-3">
-					<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Città</label>
-						<input type="text" asp-for="Citta" class="form-control form-control-alternative" required />
-					</div>
-					<div class="col-12 col-lg-3 mb-2 mb-lg-0">
-						<label class="form-label form-control-label">Provincia</label>
-						<input type="text" asp-for="Provincia" class="form-control text-uppercase form-control-alternative" maxlength="2" required />
-					</div>
-				</div>
-				<div class="text-center">
-					<button type="submit" class="btn btn-primary" style="width: 179px;">Salva</button>
+				<div class="col-12 col-lg-4 mb-2">
+					<label class="form-label form-control-label">Data di Nascita</label>
+					<input type="date" asp-for="DataNascita" class="form-control form-control-alternative" required />
 				</div>
 			</div>
 
-				<div class="col-12 col-xl-4 mt-5 mt-lg-0 px-0 px-lg-2 mt-5 mt-lg-0">	
-					<div class="bg-white border border-1 border-black shadow rounded-5 p-4 position-relative">
+			<hr class="my-4">
 
-						@{
-							bool hasImage = Model?.ImmagineProfilo != null && Model.ImmagineProfilo.Length > 0;
-							string imgSrc = null;
+			<h4 class="heading-small text-muted mt-0">Informazioni di contatto</h4>
+			<div class="row mb-0 mb-lg-3">
+				<div class="col-12 col-lg-9 mb-2 mb-lg-0">
+					<label class="form-label form-control-label">Indirizzo</label>
+					<input type="text" asp-for="Indirizzo" class="form-control form-control-alternative" required />
+				</div>
+				<div class="col-12 col-lg-3 mb-2 mb-lg-0">
+					<label class="form-label form-control-label">CAP</label>
+					<input type="text" asp-for="CAP" class="form-control form-control-alternative" maxlength="5" required />
+				</div>
+			</div>
 
-							if (hasImage)
-							{
-								var base64 = Convert.ToBase64String(Model.ImmagineProfilo);
-								imgSrc = $"data:image/jpeg;base64,{base64}";
-							}
-						}
+			<div class="row mb-0 mb-lg-3">
+				<div class="col-12 col-lg-9 mb-2 mb-lg-0">
+					<label class="form-label form-control-label">Città</label>
+					<input type="text" asp-for="Citta" class="form-control form-control-alternative" required />
+				</div>
+				<div class="col-12 col-lg-3 mb-2 mb-lg-0">
+					<label class="form-label form-control-label">Provincia</label>
+					<input type="text" asp-for="Provincia" class="form-control text-uppercase form-control-alternative" maxlength="2" required />
+				</div>
+			</div>
+			<div class="text-center">
+				<button type="submit" class="btn btn-primary" style="width: 179px;">Salva</button>
+			</div>
+		</div>
 
-						<div id="img-container" class="position-absolute top-0 start-50 translate-middle mb-5 d-flex justify-content-center align-items-center"
-							 style="width: 100px; height: 100px; border-radius: 50%; overflow: hidden; background-color: #f0f0f0; font-size: 4rem;">
-							@if (hasImage)
-							{
-								<img src="@imgSrc" alt="Immagine Profilo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" />
-							}
-							else
-							{
-								<!-- Imposta le dimensioni dell'icona per essere uguali all'immagine -->
-								<i class="bi bi-person-circle rounded img-icon text-black bg-white" style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%; font-size: 6rem; border-radius: 50%;"></i>
-							}
-						</div>
-						<h4 class="text-center mt-5">
-							<!-- Mostra il nome solo se il modello non è null/vuoto -->
-							@(Model?.Nome ?? "Studente") @(Model?.Cognome ?? "Cognome")
-						</h4>
-						<p class="text-center">Università UniGen</p>
-						<hr class="my-4">
-						<h5 class="text-center">Modifica Immagine Profilo</h5>
-					<p class="text-center">Qualora volessi aggiornare il tuo profilo, carica una nuova immagine scegliendo un file dal tuo dispositivo.</p> <p class="text-center"><strong>Formati supportati:</strong> JPEG, JPG, PNG. </p>
+		<div class="col-12 col-xl-4 px-0 px-lg-2 mt-5 mt-xl-0">
+			<div class="bg-white border border-1 border-black shadow rounded-5 p-4 position-relative">
 
-						<div class="input-group mt-5">
-							<input type="file" class="form-control" asp-for="ImmagineProfiloFile" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" />
-							<button type="submit" class="btn btn-primary">Salva</button>
-						</div>
+				@{
+					bool hasImage = Model?.ImmagineProfilo != null && Model.ImmagineProfilo.Length > 0;
+					string imgSrc = null;
 
-					</div>
-				</div>			
-		</form>
-	</div>
+					if (hasImage)
+					{
+						var base64 = Convert.ToBase64String(Model.ImmagineProfilo);
+						imgSrc = $"data:image/jpeg;base64,{base64}";
+					}
+				}
+
+				<div id="img-container" class="position-absolute top-0 start-50 translate-middle mb-5 d-flex justify-content-center align-items-center"
+					 style="width: 100px; height: 100px; border-radius: 50%; overflow: hidden; background-color: #f0f0f0; font-size: 4rem;">
+					@if (hasImage)
+					{
+						<img src="@imgSrc" alt="Immagine Profilo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" />
+					}
+					else
+					{
+						<!-- Imposta le dimensioni dell'icona per essere uguali all'immagine -->
+						<i class="bi bi-person-circle rounded img-icon text-black bg-white" style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%; font-size: 6rem; border-radius: 50%;"></i>
+					}
+				</div>
+				<h4 class="text-center mt-5">
+					<!-- Mostra il nome solo se il modello non è null/vuoto -->
+					@(Model?.Nome ?? "Studente") @(Model?.Cognome ?? "Cognome")
+				</h4>
+				<p class="text-center">Università UniGen</p>
+				<hr class="my-4">
+				<h5 class="text-center">Modifica Immagine Profilo</h5>
+				<p class="text-center">Qualora volessi aggiornare il tuo profilo, carica una nuova immagine scegliendo un file dal tuo dispositivo.</p> <p class="text-center"><strong>Formati supportati:</strong> JPEG, JPG, PNG. </p>
+
+				<div class="input-group mt-5">
+					<input type="file" class="form-control" asp-for="ImmagineProfiloFile" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" />
+					<button type="submit" class="btn btn-primary">Salva</button>
+				</div>
+
+			</div>
+		</div>
+	</form>
+</div>
 
 
 <script>
