--- a/AreaDocente/Views/Materiali/Edit.cshtml
+++ b/AreaDocente/Views/Materiali/Edit.cshtml
@@ -1,11 +1,16 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model AreaDocente.Models.Entities.MVCMateriali
+@model AreaDocente.Models.EditMaterialiViewModel
 
 <h1>Modifica Materiali</h1>
 
 <form method="post" enctype ="multipart/form-data">
+
+	<div class="mt-3 d-none">
+		<label class="form-label">K_Materiale</label>
+		<input type="text" class="form-control" asp-for="K_Materiale" readonly />
+	</div>
 
 	<div class="mt-3" >
 		<label class="form-label">Titolo</label>
@@ -13,16 +18,12 @@
 	</div>
 	<div class="form-group">
 		<label>Nuovo file</label>
-		<input type="file" name="file" class="form-control" />
-	</div>
-	<div class="mt-3">
-		<label class="form-label">Tipo</label>
-		<input type="text" class="form-control" asp-for="Tipo" />
+		<input type="file" id="file" name="MaterialeDA" class="form-control" asp-for="MaterialeDA" />
 	</div>
 	<div class="mt-3">
 		<label class="form-label">Esame</label>
 		<select asp-for="K_Esame" asp-items="@ViewBag.EsameList" class="form-select">
-			<option disabled selected>==Selezionare una facoltà</option>
+			<option disabled selected>== Selezionare una facoltà ==</option>
 		</select>
 	</div>
 
