--- a/AreaDocente/Views/Materiali/Edit.cshtml
+++ b/AreaDocente/Views/Materiali/Edit.cshtml
@@ -29,7 +29,7 @@
 
 	<div class="mt-3">
 		<button type="submit" class="btn btn-primary">Modifica</button>
-		@* <button type="submit" class="btn btn-danger ms-3" asp-controller="Students" asp-action="Delete">Elimina</button> *@
+		<button type="submit" class="btn btn-danger ms-3" asp-controller="Materiali" asp-action="Delete">Elimina</button>
 	</div>
 
 </form>
